handling youtube video center align with fixed ratio

--- a/src/components/viewer/viewer.style.scss
+++ b/src/components/viewer/viewer.style.scss
@@ -1,15 +1,21 @@
 .webviewer-container {
+  position: relative;
   display: flex;
-  align-items: center;
+  justify-content: center;
   background-color: black;
   width: 100%;
   height: 100%;
   .youtube-frame-wrapper {
+    position: absolute;
     display: flex;
-    aspect-ratio: 3 / 2;
+    aspect-ratio: 16 / 9;
     width: 100%;
-    align-items: center;
+    max-height: 80%;
     background-color: black;
+
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
   }
 }
 
